--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>paulakerejola</finalName>
     </build>
 
 </project>
