--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: 199219911990/paulakerejola
-        tags: v1 latest
+        tags: v1 
         dockerfile: Dockerfile
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
