edited docker compose file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,38 @@
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:postgresql://localhost:5433/fashion_blog_db
+#spring.datasource.url=jdbc:postgresql://springboot-postgresql:5433/fashionblog
 #spring.datasource.driver-class-name= org.postgresql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=1234
 #spring.jpa.show-sql=true
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dcapp
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:dcapp
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+
+[12:09] Monsuru Lawal
+server.port=8080
+#server.port=9099
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://mysqldb:3306/fashiondb
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.datasource.password=${MYSQL_PASSWORD:Servelet2022}
+#  Servelet2022
+#logging.level.root=WARN
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=Innodb
+spring.data.jpa.repositories.enabled=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.defer-datasource-initialization=true
+@@global.innodb_large_prefix=1
+
+
